// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design system — dark theme Button fires onPress and renders variants 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignSelf": "stretch",
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityLabel="Continue"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 16,
          "borderWidth": 2,
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
          "paddingHorizontal": 20,
          "paddingVertical": 16,
        },
        {
          "backgroundColor": "#E8C870",
          "borderColor": "#E8C870",
        },
        false,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#F2F0EB",
            "fontFamily": "Plus Jakarta Sans",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#F2F0EB",
          },
          false,
          [
            {
              "fontWeight": "700",
            },
            {
              "color": "#F2F0EB",
            },
          ],
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`design system — dark theme Card / Badge / Skeleton / EmptyState render 1`] = `
<View
  style={
    [
      {
        "borderRadius": 24,
        "elevation": 2,
        "padding": 16,
        "shadowColor": "#F2F0EB",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 12,
      },
      {
        "backgroundColor": "#1E1D1B",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignSelf": "flex-start",
          "borderRadius": 9999,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#E8C870",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#F2F0EB",
            "fontFamily": "Plus Jakarta Sans",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 0.8,
            "textTransform": "uppercase",
          },
          {
            "color": "#1A1917",
          },
          false,
          undefined,
        ]
      }
    >
      ELITE
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      [
        {
          "backgroundColor": "#2A2824",
          "borderRadius": 12,
          "height": 20,
          "width": 120,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#35332F",
          "borderRadius": 12,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 12,
        "justifyContent": "center",
        "paddingHorizontal": 24,
        "paddingVertical": 40,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#6D6A64",
            "fontSize": 36,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        [
          {
            "color": "#F2F0EB",
            "fontFamily": "Plus Jakarta Sans",
            "fontSize": 20,
            "fontWeight": "600",
            "lineHeight": 25,
          },
          {
            "color": "#F2F0EB",
          },
          {
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      No plans yet
    </Text>
    <Text
      style={
        [
          {
            "color": "#F2F0EB",
            "fontFamily": "Plus Jakarta Sans",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#A8A5A0",
          },
          {
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Create your first plan.
    </Text>
  </View>
</View>
`;

exports[`design system — dark theme Text renders all variants 1`] = `
[
  <Text
    style={
      [
        {
          "color": "#F2F0EB",
          "fontFamily": "Fraunces",
          "fontSize": 34,
          "fontWeight": "700",
          "lineHeight": 37.400000000000006,
        },
        {
          "color": "#F2F0EB",
        },
        false,
        undefined,
      ]
    }
  >
    Display
  </Text>,
  <Text
    style={
      [
        {
          "color": "#F2F0EB",
          "fontFamily": "Fraunces",
          "fontSize": 32,
          "fontWeight": "700",
          "lineHeight": 36.8,
        },
        {
          "color": "#F2F0EB",
        },
        false,
        undefined,
      ]
    }
  >
    Heading
  </Text>,
  <Text
    style={
      [
        {
          "color": "#F2F0EB",
          "fontFamily": "Plus Jakarta Sans",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "#A8A5A0",
        },
        false,
        undefined,
      ]
    }
  >
    Body
  </Text>,
  <Text
    style={
      [
        {
          "color": "#F2F0EB",
          "fontFamily": "Plus Jakarta Sans",
          "fontSize": 12,
          "fontWeight": "600",
          "letterSpacing": 0.8,
          "textTransform": "uppercase",
        },
        {
          "color": "#E8C870",
        },
        false,
        undefined,
      ]
    }
  >
    Label
  </Text>,
]
`;

exports[`design system — light theme Button fires onPress and renders variants 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignSelf": "stretch",
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityLabel="Continue"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 16,
          "borderWidth": 2,
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
          "paddingHorizontal": 20,
          "paddingVertical": 16,
        },
        {
          "backgroundColor": "#C9A84C",
          "borderColor": "#C9A84C",
        },
        false,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#1A1917",
            "fontFamily": "Plus Jakarta Sans",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#1A1917",
          },
          false,
          [
            {
              "fontWeight": "700",
            },
            {
              "color": "#1A1917",
            },
          ],
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`design system — light theme Card / Badge / Skeleton / EmptyState render 1`] = `
<View
  style={
    [
      {
        "borderRadius": 24,
        "elevation": 2,
        "padding": 16,
        "shadowColor": "#1A1917",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 12,
      },
      {
        "backgroundColor": "#F4F3F0",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignSelf": "flex-start",
          "borderRadius": 9999,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#7C5A14",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#1A1917",
            "fontFamily": "Plus Jakarta Sans",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 0.8,
            "textTransform": "uppercase",
          },
          {
            "color": "#FAFAF8",
          },
          false,
          undefined,
        ]
      }
    >
      ELITE
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      [
        {
          "backgroundColor": "#EDE5DF",
          "borderRadius": 12,
          "height": 20,
          "width": 120,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#F5EDE8",
          "borderRadius": 12,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 12,
        "justifyContent": "center",
        "paddingHorizontal": 24,
        "paddingVertical": 40,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#8A8780",
            "fontSize": 36,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        [
          {
            "color": "#1A1917",
            "fontFamily": "Plus Jakarta Sans",
            "fontSize": 20,
            "fontWeight": "600",
            "lineHeight": 25,
          },
          {
            "color": "#1A1917",
          },
          {
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      No plans yet
    </Text>
    <Text
      style={
        [
          {
            "color": "#1A1917",
            "fontFamily": "Plus Jakarta Sans",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#6D6A64",
          },
          {
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Create your first plan.
    </Text>
  </View>
</View>
`;

exports[`design system — light theme Text renders all variants 1`] = `
[
  <Text
    style={
      [
        {
          "color": "#1A1917",
          "fontFamily": "Fraunces",
          "fontSize": 34,
          "fontWeight": "700",
          "lineHeight": 37.400000000000006,
        },
        {
          "color": "#1A1917",
        },
        false,
        undefined,
      ]
    }
  >
    Display
  </Text>,
  <Text
    style={
      [
        {
          "color": "#1A1917",
          "fontFamily": "Fraunces",
          "fontSize": 32,
          "fontWeight": "700",
          "lineHeight": 36.8,
        },
        {
          "color": "#1A1917",
        },
        false,
        undefined,
      ]
    }
  >
    Heading
  </Text>,
  <Text
    style={
      [
        {
          "color": "#1A1917",
          "fontFamily": "Plus Jakarta Sans",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "#6D6A64",
        },
        false,
        undefined,
      ]
    }
  >
    Body
  </Text>,
  <Text
    style={
      [
        {
          "color": "#1A1917",
          "fontFamily": "Plus Jakarta Sans",
          "fontSize": 12,
          "fontWeight": "600",
          "letterSpacing": 0.8,
          "textTransform": "uppercase",
        },
        {
          "color": "#7C5A14",
        },
        false,
        undefined,
      ]
    }
  >
    Label
  </Text>,
]
`;
